feat: complete v3.18 modules
